--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="My github repositories">
+    <meta name="keywords" content="HTML, CSS, Github, Repository">
+    <meta name="author" content="CarlosJorgeR">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My github repositories</title>
 </head>
 <body>
