add more metadata

--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="My github repositories">
+    <meta name="description" content="Carlos Jorge's github repositories">
     <meta name="keywords" content="HTML, CSS, Github, Repository">
     <meta name="author" content="CarlosJorgeR">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:url" content="https://carlosjorger.github.io/my-repositories/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Carlos Jorge's github repositories">
+    <meta property="og:description" content="Carlos Jorge's github repositories">
+    <meta property="og:site_name" content="Carlos Jorge's github repositories">
+    <meta property="og:image" itemprop="image" content="https://carlosjorger.github.io/my-repositories/images/logo.png">
+    <meta property="twitter:description" content="Carlos Jorge's github repositories">
+    <meta property="twitter:title" content="Carlos Jorge's github repositories">
+    <link rel="icon" type="image/x-icon" href="images/github.ico">
     <title>My github repositories</title>
 </head>
 <body>
     <main>
-        <h1>These are my github repositories</h1>  
+        <h1>Hi, I am Carlos Jorge!</h1>
+        <h2>These are my github repositories</h2>  
     </main>
     <article>
         <ul>
