--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Carlos Jorge's github repositories">
+    <meta name="description" content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
     <meta name="keywords" content="HTML, CSS, Github, Repository">
     <meta name="author" content="CarlosJorgeR">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:locale" content="en_US">
     <meta property="og:url" content="https://carlosjorger.github.io/my-repositories/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Carlos Jorge's github repositories">
-    <meta property="og:description" content="Carlos Jorge's github repositories">
-    <meta property="og:site_name" content="Carlos Jorge's github repositories">
+    <meta property="og:title" content="CarlosJorgeR's github repositories">
+    <meta property="og:description" content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+    <meta property="og:site_name" content="My repositories">
     <meta property="og:image" itemprop="image" content="https://carlosjorger.github.io/my-repositories/images/logo.png">
-    <meta property="twitter:description" content="Carlos Jorge's github repositories">
-    <meta property="twitter:title" content="Carlos Jorge's github repositories">
+    <meta property="twitter:description" content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+    <meta property="twitter:title" content="CarlosJorgeR's github repositories">
     <link rel="icon" type="image/x-icon" href="images/github.ico">
     <title>My github repositories</title>
 </head>
