--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <meta property="twitter:title" content="CarlosJorgeR's github repositories">
     <link rel="icon" type="image/x-icon" href="images/github.ico">
     <title>My github repositories</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
     <main>
         <h1>Hi, I am Carlos Jorge!</h1>
-        <h2>These are my github repositories</h2>  
+        <h2>These are my github repositories:</h2>  
     </main>
     <article>
         <ul>
