--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="eng">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+    <meta name="description"
+        content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
     <meta name="keywords" content="HTML, CSS, Github, Repository">
     <meta name="author" content="CarlosJorgeR">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,25 +12,31 @@
     <meta property="og:url" content="https://carlosjorger.github.io/my-repositories/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="CarlosJorgeR's github repositories">
-    <meta property="og:description" content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+    <meta property="og:description"
+        content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
     <meta property="og:site_name" content="My repositories">
     <meta property="og:image" itemprop="image" content="https://carlosjorger.github.io/my-repositories/images/logo.png">
-    <meta property="twitter:description" content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+    <meta property="twitter:description"
+        content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
     <meta property="twitter:title" content="CarlosJorgeR's github repositories">
     <link rel="icon" type="image/x-icon" href="images/github.ico">
     <title>My github repositories</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
+
 <body>
     <main>
-        <h1>Hi, I am Carlos Jorge!</h1>
-        <h2>These are my github repositories:</h2>  
+        <div>
+            <h1>Hi, I am Carlos Jorge!</h1>
+            <h2>These are my github repositories:</h2>
+        </div>
     </main>
     <article>
         <ul>
             <li><a href="https://github.com/CarlosJorgeR/OpenEcommerce">OpenEcommerce</a></li>
-            <li ><a href="https://github.com/CarlosJorgeR/portfolio">My portfolio</a> </li>
+            <li><a href="https://github.com/CarlosJorgeR/portfolio">My portfolio</a> </li>
         </ul>
     </article>
 </body>
+
 </html>
