--- a/index.html
+++ b/index.html
@@ -25,18 +25,23 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <div>
             <h1>Hi, I am Carlos Jorge!</h1>
             <h2>These are my github repositories:</h2>
         </div>
-    </main>
-    <article>
-        <ul>
-            <li><a href="https://github.com/CarlosJorgeR/OpenEcommerce">OpenEcommerce</a></li>
-            <li><a href="https://github.com/CarlosJorgeR/portfolio">My portfolio</a> </li>
-        </ul>
-    </article>
+    </header>
+    <section>
+        <article>
+            <ul>
+                <li><a href="https://github.com/CarlosJorgeR/OpenEcommerce">OpenEcommerce</a></li>
+                <li><a href="https://github.com/CarlosJorgeR/portfolio">My portfolio</a> </li>
+            </ul>
+        </article>
+    </section>
+    <footer>
+        <a href="mailto:rodriguezcuelloc@gmail.com">Contact me</a>
+    </footer>
 </body>
 
-</html>
+</html> 
