--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         </article>
     </section>
     <footer>
-        <a href="mailto:rodriguezcuelloc@gmail.com">Contact me</a>
+        <article>
+            <h2>Contact</h2>
+            <a href="mailto:rodriguezcuelloc@gmail.com">My email</a>
+        </article>
     </footer>
 </body>
 
