--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <article>
         <h2>These are my github repositories:</h2>
         <ul>
-          <li><p><a href="https://github.com/CarlosJorgeR/OpenEcommerce" target="_blank">OpenEcommerce</a> is an ecomerce builded with .net.</p></li>
-          <li><p><a href="https://github.com/CarlosJorgeR/portfolio" target="_blank">My portfolio</a> is a personal portfolio builded with angular.</p></li>
+          <li><p><a href="https://github.com/CarlosJorgeR/OpenEcommerce" target="_blank" rel="noopener noreferrer">OpenEcommerce</a> is an ecommerce builded with .net.</p></li>
+          <li><p><a href="https://github.com/CarlosJorgeR/portfolio" target="_blank" rel="noopener noreferrer">My portfolio</a> is a personal portfolio builded with angular.</p></li>
         </ul>
       </article>
     </section>
