--- a/index.html
+++ b/index.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
 <html lang="eng">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="description"
-      content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
-    <meta name="keywords" content="HTML, CSS, Github, Repository">
-    <meta name="author" content="CarlosJorgeR">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:url" content="https://carlosjorger.github.io/my-repositories/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="CarlosJorgeR's github repositories">
-    <meta property="og:description"
-      content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
-    <meta property="og:site_name" content="My repositories">
-    <meta property="og:image" itemprop="image" content="https://carlosjorger.github.io/my-repositories/images/logo.png">
-    <meta property="twitter:description"
-      content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
-    <meta property="twitter:title" content="CarlosJorgeR's github repositories">
-    <link rel="icon" type="image/x-icon" href="images/github.ico">
-    <title>My github repositories</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
-  <body>
-    <header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description"
+    content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+  <meta name="keywords" content="HTML, CSS, Github, Repository">
+  <meta name="author" content="CarlosJorgeR">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:url" content="https://carlosjorger.github.io/my-repositories/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="CarlosJorgeR's github repositories">
+  <meta property="og:description"
+    content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+  <meta property="og:site_name" content="My repositories">
+  <meta property="og:image" itemprop="image" content="https://carlosjorger.github.io/my-repositories/images/logo.png">
+  <meta property="twitter:description"
+    content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+  <meta property="twitter:title" content="CarlosJorgeR's github repositories">
+  <link rel="icon" type="image/x-icon" href="images/github.ico">
+  <title>My github repositories</title>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+</head>
+
+<body>
+  <header>
+    <div class="title">
       <h1>Hi, I am Carlos Jorge!</h1>
-    </header>
-    <section>
-      <article>
-        <h2>These are my github repositories:</h2>
-        <ul>
-          <li><p><a href="https://github.com/CarlosJorgeR/OpenEcommerce" target="_blank" rel="noopener noreferrer">OpenEcommerce</a> is an ecommerce builded with .net.</p></li>
-          <li><p><a href="https://github.com/CarlosJorgeR/portfolio" target="_blank" rel="noopener noreferrer">My portfolio</a> is a personal portfolio builded with angular.</p></li>
-        </ul>
-      </article>
-    </section>
-    <footer>
-      <article>
-        <h2>Contact</h2>
-        <a href="mailto:rodriguezcuelloc@gmail.com">My email</a>
-      </article>
-    </footer>
-  </body>
+    </div>
+  </header>
+  <section>
+    <article>
+      <h2>These are my github repositories:</h2>
+      <ul>
+        <li>
+          <p><a href="https://github.com/CarlosJorgeR/OpenEcommerce" target="_blank"
+              rel="noopener noreferrer">OpenEcommerce</a> is an ecommerce builded with .net.</p>
+        </li>
+        <li>
+          <p><a href="https://github.com/CarlosJorgeR/portfolio" target="_blank" rel="noopener noreferrer">My
+              portfolio</a> is a personal portfolio builded with angular.</p>
+        </li>
+      </ul>
+    </article>
+  </section>
+  <footer>
+    <article>
+      <h2>Contact</h2>
+      <a href="mailto:rodriguezcuelloc@gmail.com">My email</a>
+    </article>
+  </footer>
+</body>
 
 </html>
