--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
 
 <body>
   <header>
-    <div class="title">
-      <h1>Hi, I am Carlos Jorge!</h1>
-    </div>
+    <section>
+      <div class="title">
+        <h1>Hi, I am Carlos Jorge!</h1>
+        <h2>I'm an full-stack engineer</h2>
+        <h6>I'm a cuban computer science from Havana University.<br>Currently,I'm working as full-stack engineer focused in building .net application, and angular applications</h6>
+       
+      </div>
+    </section>
   </header>
   <section>
     <article>
