add more styles of font-size

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 <body>
   <header>
     <section>
-      <div class="title">
-        <h1>Hi, I am Carlos Jorge!</h1>
-        <h2>I'm an full-stack engineer</h2>
-        <h6>I'm a cuban computer science from Havana University.<br>Currently,I'm working as full-stack engineer focused in building .net application, and angular applications</h6>
+      <div class="presentation">
+        <h1 id="presentation">Hi, I am Carlos Jorge!</h1>
+        <h1 id="presentation-main-skill">I'm an full-stack engineer</h2>
+        <h1 id="presentation-description">I'm a cuban computer science from Havana University.<br>Currently, I'm working as full-stack engineer focused in building .net application, and angular applications.</h6>
        
       </div>
     </section>
   </header>
   <section>
     <article>
-      <h2>These are my github repositories:</h2>
+      <h2 class="title">These are my github repositories:</h2>
       <ul>
         <li>
           <p><a href="https://github.com/CarlosJorgeR/OpenEcommerce" target="_blank"
@@ -52,7 +52,7 @@
   </section>
   <footer>
     <article>
-      <h2>Contact</h2>
+      <h2 class="title">Contact</h2>
       <a href="mailto:rodriguezcuelloc@gmail.com">My email</a>
     </article>
   </footer>
