add new styles to links

--- a/index.html
+++ b/index.html
@@ -26,18 +26,15 @@
 
 <body>
   <header>
-    <section>
-      <div class="presentation">
-        <h1 id="presentation">Hi, I am Carlos Jorge!</h1>
-        <h1 id="presentation-main-skill">I'm an full-stack engineer</h2>
-        <h1 id="presentation-description">I'm a cuban computer science from Havana University.<br>Currently, I'm working as full-stack engineer focused in building .net application, and angular applications.</h6>
-       
-      </div>
-    </section>
+    <div class="presentation">
+      <h1 id="presentation-title">Hi, I am Carlos Jorge!</h1>
+      <h2 id="presentation-main-skill">I'm an full-stack engineer</h2>
+      <h4 id="presentation-description">I'm a cuban computer science from Havana University.<br>Currently, I'm working as full-stack engineer focused in building .net application, and angular applications.</h4> 
+    </div>
   </header>
   <section>
     <article>
-      <h2 class="title">These are my github repositories:</h2>
+      <h2 class="subtitle">These are my github repositories:</h2>
       <ul>
         <li>
           <p><a href="https://github.com/CarlosJorgeR/OpenEcommerce" target="_blank"
@@ -52,8 +49,8 @@
   </section>
   <footer>
     <article>
-      <h2 class="title">Contact</h2>
-      <a href="mailto:rodriguezcuelloc@gmail.com">My email</a>
+      <h2 class="subtitle">Contact</h2>
+      <p><a href="mailto:rodriguezcuelloc@gmail.com">My email</a></p>
     </article>
   </footer>
 </body>
