--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     <div class="presentation">
       <h1 id="presentation-title">Hi, I am Carlos Jorge!</h1>
       <h2 id="presentation-main-skill">I'm an full-stack engineer</h2>
-      <h4 id="presentation-description">I'm a cuban computer science from Havana University.<br>Currently, I'm working as full-stack engineer focused in building .net application, and angular applications.</h4> 
+      <p>
+        I'm a cuban computer science from Havana University. 
+        Currently, I'm working as full-stack engineer focused in building .net application, and angular applications.
+      </p> 
     </div>
   </header>
   <section>
