add font-awesome and and github icon

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link rel="icon" type="image/x-icon" href="images/github.ico">
   <title>My github repositories</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -53,7 +54,7 @@
   <footer>
     <article>
       <h2 class="subtitle">Contact</h2>
-      <p><a href="mailto:rodriguezcuelloc@gmail.com">My email</a></p>
+      <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-github" ></i></a>
     </article>
   </footer>
 </body>
