add google icon

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <footer>
     <article>
       <h2 class="subtitle">Contact</h2>
-      <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-github" ></i></a>
+      <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google" ></i></a>
     </article>
   </footer>
 </body>
