--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <h2 class="subtitle">These are my github repositories:</h2>
       <ul>
         <li>
-          <p><a href="https://github.com/CarlosJorgeR/OpenEcommerce" target="_blank"
-              rel="noopener noreferrer">OpenEcommerce</a> is an ecommerce builded with .net.</p>
+          <p><a href="https://github.com/CarlosJorgeR/openEcommerce" target="_blank" rel="noopener noreferrer">
+            OpenEcommerce</a> is an ecommerce builded with .net.</p>
         </li>
         <li>
-          <p><a href="https://github.com/CarlosJorgeR/portfolio" target="_blank" rel="noopener noreferrer">My
-              portfolio</a> is a personal portfolio builded with angular.</p>
+          <p><a href="https://github.com/CarlosJorgeR/portfolio" target="_blank" rel="noopener noreferrer">
+            My portfolio</a> is a personal portfolio builded with angular.</p>
         </li>
       </ul>
     </article>
@@ -55,6 +55,8 @@
     <article>
       <h2 class="subtitle">Contact</h2>
       <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google" ></i></a>
+      <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github" ></i></a>
+      <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-linkedin" ></i></a>
     </article>
   </footer>
 </body>
