--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       <h2 class="subtitle">Contact</h2>
       <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google" ></i></a>
       <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github" ></i></a>
-      <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-linkedin" ></i></a>
+      <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fa fa-linkedin" ></i></a>
+      <a href="https://twitter.com/CarlosJorgeRod3"><i class="fa fa-twitter" ></i></a>
     </article>
   </footer>
 </body>
