--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </article>
   </section>
   <footer>
-    <article>
+    <article class="contacts">
       <h2 class="subtitle">Contact</h2>
       <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google" ></i></a>
       <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github" ></i></a>
