add animation to the presentation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="presentation">
       <h1 id="presentation-title">Hi, I am Carlos Jorge!</h1>
       <h2 id="presentation-main-skill">I'm an full-stack engineer</h2>
-      <p>
+      <p id="presentation-description">
         I'm a cuban computer science from Havana University. 
         Currently, I'm working as full-stack engineer focused in building .net application, and angular applications.
       </p> 
