add dinamic animation with scroll

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+  <script src="index.js"></script>
 </head>
 
 <body>
@@ -34,33 +35,35 @@
       <h1 id="presentation-title">Hi, I am Carlos Jorge!</h1>
       <h2 id="presentation-main-skill">I'm an full-stack engineer</h2>
       <p id="presentation-description">
-        I'm a cuban computer science from Havana University. 
+        I'm a cuban computer science from Havana University.
         Currently, I'm working as full-stack engineer focused in building .net application, and angular applications.
-      </p> 
+      </p>
     </div>
   </header>
   <section>
     <article>
-      <h2 class="subtitle">These are my github repositories:</h2>
+      <h2 class="subtitle reveal">These are my github repositories:</h2>
       <ul>
-        <li>
+        <li class="reveal">
           <p><a href="https://github.com/CarlosJorgeR/openEcommerce" target="_blank" rel="noopener noreferrer">
-            OpenEcommerce</a> is an ecommerce builded with .net.</p>
+              OpenEcommerce</a> is an ecommerce builded with .net.</p>
         </li>
-        <li>
+        <li class="reveal">
           <p><a href="https://github.com/CarlosJorgeR/portfolio" target="_blank" rel="noopener noreferrer">
-            My portfolio</a> is a personal portfolio builded with angular.</p>
+              My portfolio</a> is a personal portfolio builded with angular.</p>
         </li>
       </ul>
     </article>
   </section>
   <footer>
     <article class="contacts">
-      <h2 class="subtitle">Contact</h2>
-      <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google" ></i></a>
-      <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github" ></i></a>
-      <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fa fa-linkedin" ></i></a>
-      <a href="https://twitter.com/CarlosJorgeRod3"><i class="fa fa-twitter" ></i></a>
+      <h2 class="subtitle reveal">Contact</h2>
+      <div class="reveal">
+        <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google"></i></a>
+        <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fa fa-linkedin"></i></a>
+        <a href="https://twitter.com/CarlosJorgeRod3"><i class="fa fa-twitter"></i></a>
+      </div>
     </article>
   </footer>
 </body>
