--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   </section>
   <footer>
     <article class="contacts">
-      <h2 class="subtitle reveal">Contact</h2>
-      <div class="reveal">
+      <h2 class="subtitle contacts-item reveal">Contact</h2>
+      <div class="reveal contacts-item">
         <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google"></i></a>
         <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github"></i></a>
         <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fa fa-linkedin"></i></a>
