--- a/index.html
+++ b/index.html
@@ -55,14 +55,26 @@
       </ul>
     </article>
   </section>
+  <section>
+    <article>
+      <div class="contacts">
+        <h2 class="subtitle contacts-item reveal">Contact</h2>
+        <div class="contacts-item reveal">
+          <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google"></i></a>
+          <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fa fa-linkedin"></i></a>
+          <a href="https://twitter.com/CarlosJorgeRod3"><i class="fa fa-twitter"></i></a>
+        </div>
+      </div>
+    </article>
+  </section>
   <footer>
-    <article class="contacts">
-      <h2 class="subtitle contacts-item reveal">Contact</h2>
-      <div class="reveal contacts-item">
-        <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google"></i></a>
-        <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fa fa-linkedin"></i></a>
-        <a href="https://twitter.com/CarlosJorgeRod3"><i class="fa fa-twitter"></i></a>
+    <article>
+      <div class="footer reveal">
+        <h3 class="footer-item"> © 2022 Carlos Jorge</h3>
+        <h3 class="footer-item">
+          Published in <a href="https://pages.github.com/">Github Page</a>
+        </h3>
       </div>
     </article>
   </footer>
