--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
   </section>
   <section>
     <article>
-      <div class="contacts">
-        <h2 class="subtitle contacts-item reveal">Contact</h2>
-        <div class="contacts-item reveal">
+      <div class="contacts reveal">
+        <h2 class="subtitle contacts-item">Contact</h2>
+        <div class="contacts-item">
           <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google"></i></a>
           <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github"></i></a>
           <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fa fa-linkedin"></i></a>
