change font-size property

--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
   <link rel="icon" type="image/x-icon" href="images/github.ico">
   <title>My github repositories</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
   <script src="index.js"></script>
+
+
+
 </head>
 
 <body>
@@ -56,17 +61,15 @@
     </article>
   </section>
   <section>
-    <article>
-      <div class="contacts reveal">
-        <h2 class="subtitle contacts-item">Contact</h2>
-        <div class="contacts-item">
-          <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fa fa-google"></i></a>
-          <a href="https://github.com/CarlosJorgeR"><i class="fa fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fa fa-linkedin"></i></a>
-          <a href="https://twitter.com/CarlosJorgeRod3"><i class="fa fa-twitter"></i></a>
-        </div>
+    <div class="contacts reveal">
+      <h1 class="subtitle contacts-item">Contact</h1>
+      <div class="contacts-item">
+        <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fab fa-google fa-2xl"></i></a>
+        <a href="https://github.com/CarlosJorgeR"><i class="fab fa-github fa-2xl"></i></a>
+        <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fab fa-linkedin fa-2xl"></i></a>
+        <a href="https://twitter.com/CarlosJorgeRod3"><i class="fab fa-twitter fa-2xl"></i></a>
       </div>
-    </article>
+    </div>
   </section>
   <footer>
     <article>
