--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <body>
   <header>
     <div class="presentation">
-      <h1 id="presentation-title">Hi, I am Carlos Jorge!</h1>
-      <h2 id="presentation-main-skill">I'm an full-stack engineer</h2>
+      <h1 id="presentation-title">Hi, I am <br class='br-show'>Carlos Jorge!</h1>
+      <h2 id="presentation-main-skill">I'm an <br class='br-show'>full-stack engineer</h2>
       <p id="presentation-description">
         I'm a cuban computer science from Havana University.
         Currently, I'm working as full-stack engineer focused in building .net application, and angular applications.
@@ -60,24 +60,26 @@
       </ul>
     </article>
   </section>
-  <section>
-    <div class="contacts reveal">
-      <h1 class="subtitle contacts-item">Contact</h1>
-      <div class="contacts-item">
-        <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fab fa-google fa-2xl"></i></a>
-        <a href="https://github.com/CarlosJorgeR"><i class="fab fa-github fa-2xl"></i></a>
-        <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fab fa-linkedin fa-2xl"></i></a>
-        <a href="https://twitter.com/CarlosJorgeRod3"><i class="fab fa-twitter fa-2xl"></i></a>
-      </div>
-    </div>
-  </section>
   <footer>
     <article>
+      <div class="contacts reveal">
+        <h1 class="subtitle contacts-item">Contact</h1>
+        <div class="contacts-item">
+          <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fab fa-google fa-2xl"></i></a>
+          <a href="https://github.com/CarlosJorgeR"><i class="fab fa-github fa-2xl"></i></a>
+          <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fab fa-linkedin fa-2xl"></i></a>
+          <a href="https://twitter.com/CarlosJorgeRod3"><i class="fab fa-twitter fa-2xl"></i></a>
+        </div>
+      </div>
+    </article>
+    <article>
       <div class="footer reveal">
-        <h3 class="footer-item"> © 2022 Carlos Jorge</h3>
-        <h3 class="footer-item">
+        <p class="footer-item"> 
+          © 2022 Carlos Jorge
+          </br>
           <a href="https://github.com/CarlosJorgeR/carlosjorger.github.io">Published</a> in <a href="https://pages.github.com/">Github Page</a>
-        </h3>
+        </p>
+       
       </div>
     </article>
   </footer>
