--- a/index.html
+++ b/index.html
@@ -89,13 +89,12 @@
         <p class="footer-item">
           © 2022 Carlos Jorge
           </br>
-          <a href="https://github.com/CarlosJorgeR/carlosjorger.github.io">Published</a> in <a
-            href="https://pages.github.com/">Github Page</a>
+          <a class="work-link" href="https://github.com/CarlosJorgeR/carlosjorger.github.io">Published</a> in 
+          <a class="work-link" href="https://pages.github.com/">Github Page</a>
         </p>
 
       </div>
     </article>
   </footer>
 </body>
-
 </html>
