--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header>
     <nav>
       <ul class="menu">
-        <li id="home"> <a href="#"><i class="fa fa-house fa-xl"></i></a></li>
+        <li id="home"> <a href="#"><i class="fa fa-house fa-lg"></i></a></li>
         <li>
           <a class="nav-link" href="#work">Work</a>
           <a class="nav-link" href="#contact">Contact</a>
