--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
   <section>
     <article id="work">
       <h2 class="subtitle reveal">These are my github repositories:</h2>
+      <div class="card-project">
+
+      </div>
       <ul>
         <li class="reveal">
           <p><a class="work-link" href="https://github.com/CarlosJorgeR/openEcommerce" target="_blank"
@@ -77,10 +80,10 @@
       <div id="contact" class="contacts reveal">
         <h1 class="subtitle contacts-item">Contact</h1>
         <div class="contacts-item">
-          <a href="mailto:rodriguezcuelloc@gmail.com"><i class="fab fa-google fa-2xl"></i></a>
-          <a href="https://github.com/CarlosJorgeR"><i class="fab fa-github fa-2xl"></i></a>
-          <a href="https://www.linkedin.com/in/cjrcuello/"><i class="fab fa-linkedin fa-2xl"></i></a>
-          <a href="https://twitter.com/CarlosJorgeRod3"><i class="fab fa-twitter fa-2xl"></i></a>
+          <a class="icon-link" href="mailto:rodriguezcuelloc@gmail.com"><i class="fab fa-google fa-2xl"></i></a>
+          <a class="icon-link" href="https://github.com/CarlosJorgeR"><i class="fab fa-github fa-2xl"></i></a>
+          <a class="icon-link" href="https://www.linkedin.com/in/cjrcuello/"><i class="fab fa-linkedin fa-2xl"></i></a>
+          <a class="icon-link" href="https://twitter.com/CarlosJorgeRod3"><i class="fab fa-twitter fa-2xl"></i></a>
         </div>
       </div>
     </article>
