--- a/index.html
+++ b/index.html
@@ -57,11 +57,26 @@
   </section>
   <section>
     <article id="work">
-      <h2 class="subtitle reveal">These are my github repositories:</h2>
-      <div class="card-project">
-
+      <h2 class="subtitle reveal">These are my github repositories</h2>
+      <div id="open-ecommerce" class="card-project reveal">
+        <div class="card-title">
+          OpenEcommerce
+        </div>
+        <br>
+        <div class="card-description">
+          OpenEcommerce is an ecommerce builded with .net. Using a hexagonal architecture, cqrs pattern and more interesting patterns.
+        </div>
       </div>
-      <ul>
+      <div id="angular-portfolio" class="card-project reveal">
+        <div class="card-title">
+          Angular Portfolio
+        </div>
+        <br>
+        <div class="card-description">
+          It is a personal portfolio builded with angular using really cool animation (Angular animations).
+        </div>
+      </div>
+      <!-- <ul>
         <li class="reveal">
           <p><a class="work-link" href="https://github.com/CarlosJorgeR/openEcommerce" target="_blank"
               rel="noopener noreferrer">
@@ -72,7 +87,7 @@
               rel="noopener noreferrer">
               My portfolio</a> is a personal portfolio builded with angular.</p>
         </li>
-      </ul>
+      </ul> -->
     </article>
   </section>
   <footer>
@@ -92,7 +107,7 @@
         <p class="footer-item">
           © 2022 Carlos Jorge
           </br>
-          <a class="work-link" href="https://github.com/CarlosJorgeR/carlosjorger.github.io">Published</a> in 
+          <a class="work-link" href="https://github.com/CarlosJorgeR/carlosjorger.github.io">Published</a> in
           <a class="work-link" href="https://pages.github.com/">Github Page</a>
         </p>
 
@@ -100,4 +115,5 @@
     </article>
   </footer>
 </body>
+
 </html>
