--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header>
     <nav>
       <ul class="menu">
-        <li id="home"> <a href="#"><i class="fa fa-house fa-lg"></i></a></li>
+        <li id="home"> <a href="#" class="icon-link"><i class="fa fa-house fa-lg"></i></a></li>
         <li>
           <a class="nav-link" href="#work">Work</a>
           <a class="nav-link" href="#contact">Contact</a>
@@ -48,10 +48,10 @@
   <section>
     <div class="presentation">
       <h1 id="presentation-title">Hi, I am <br class='br-show'>Carlos Jorge!</h1>
-      <h2 id="presentation-main-skill">I'm an <br class='br-show'>full-stack engineer</h2>
+      <h3 id="presentation-main-skill">I'm an <br class='br-show'>full-stack engineer</h3>
       <p id="presentation-description">
         I'm a cuban computer science from Havana University.
-        Currently, I'm working as full-stack engineer focused in building .net application, and angular applications.
+        Currently, I'm working as full-stack engineer focused in building .net application, and frontend applications in frameworks like angular, vue or react.
       </p>
     </div>
   </section>
@@ -91,7 +91,8 @@
     </article>
   </section>
   <footer>
-    <article>
+    <div class="footer">
+     
       <div id="contact" class="contacts reveal">
         <h1 class="subtitle contacts-item">Contact</h1>
         <div class="contacts-item">
@@ -101,18 +102,16 @@
           <a class="icon-link" href="https://twitter.com/CarlosJorgeRod3"><i class="fab fa-twitter fa-2xl"></i></a>
         </div>
       </div>
-    </article>
-    <article>
-      <div class="footer reveal">
-        <p class="footer-item">
+      <div class="footer-info reveal">
+        <p class="footer-info-item">
           © 2022 Carlos Jorge
           </br>
           <a class="work-link" href="https://github.com/CarlosJorgeR/carlosjorger.github.io">Published</a> in
           <a class="work-link" href="https://pages.github.com/">Github Page</a>
         </p>
-
       </div>
-    </article>
+    </div>
+    
   </footer>
 </body>
 
