add link to the respositories

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         <div class="card-description">
           OpenEcommerce is an ecommerce builded with .net. Using a hexagonal architecture, cqrs pattern and more interesting patterns.
         </div>
+        <div class="card-links">
+          <a class="icon-link" href="https://github.com/CarlosJorgeR/openEcommerce"><i class="fab fa-github fa-gl"></i></a>
+        </div>
       </div>
       <div id="angular-portfolio" class="card-project reveal">
         <div class="card-title">
@@ -74,6 +77,9 @@
         <br>
         <div class="card-description">
           It is a personal portfolio builded with angular using really cool animation (Angular animations).
+        </div>
+        <div class="card-links">
+          <a class="icon-link" href="https://github.com/CarlosJorgeR/portfolio"><i class="fab fa-github fa-gl"></i></a>
         </div>
       </div>
       <!-- <ul>
