fixed responsive height

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <section>
     <article id="work">
       <h2 class="subtitle reveal">These are my github repositories</h2>
+     <div class="card-projects">
       <div id="open-ecommerce" class="card-project reveal">
         <div class="card-title">
           OpenEcommerce
@@ -74,7 +75,6 @@
         <div class="card-title">
           Angular Portfolio
         </div>
-        <br>
         <div class="card-description">
           It is a personal portfolio builded with angular using really cool animation (Angular animations).
         </div>
@@ -82,18 +82,7 @@
           <a class="icon-link" href="https://github.com/CarlosJorgeR/portfolio"><i class="fab fa-github fa-gl"></i></a>
         </div>
       </div>
-      <!-- <ul>
-        <li class="reveal">
-          <p><a class="work-link" href="https://github.com/CarlosJorgeR/openEcommerce" target="_blank"
-              rel="noopener noreferrer">
-              OpenEcommerce</a> is an ecommerce builded with .net.</p>
-        </li>
-        <li class="reveal">
-          <p><a class="work-link" href="https://github.com/CarlosJorgeR/portfolio" target="_blank"
-              rel="noopener noreferrer">
-              My portfolio</a> is a personal portfolio builded with angular.</p>
-        </li>
-      </ul> -->
+     </div>
     </article>
   </section>
   <footer>
