--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="description"
     content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
-  <meta name="keywords" content="HTML, CSS, Github, Repository">
+  <meta name="keywords" content="HTML,CSS,JavaScript,Github,Repository">
   <meta name="author" content="CarlosJorgeR">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:locale" content="en_US">
