organize css files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
   <meta property="twitter:title" content="CarlosJorgeR's github repositories">
   <link rel="icon" type="image/x-icon" href="images/github.ico">
   <title>My github repositories</title>
-  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="./css/navbar.css" />
+  <link rel="stylesheet" type="text/css" href="./css/presentation-section.css" />
+  <link rel="stylesheet" type="text/css" href="./css/project-section.css" />
+  <link rel="stylesheet" type="text/css" href="./css/footer.css" />
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -36,7 +42,7 @@
 <body>
   <header>
     <nav>
-      <ul class="menu">
+      <ul class="navbar">
         <li id="home"> <a href="#" class="icon-link"><i class="fa fa-house fa-lg"></i></a></li>
         <li>
           <a class="nav-link" href="#work">Work</a>
