add about me section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
     </div>
   </section>
   <section>
+    <article>
+      <h2 class="subtitle reveal">
+        About me
+      </h2>
+      <p class="reveal">
+        blabalbalablabalba blabalabl bbalabkabakba abalbalab abalbalabl ab albalablbal.
+        djbjhjbdavjhvb adbdkja vjdaad ahva hvd jnadvj va kjdvajadhadv. abddbjvabbda vabdjkbvaj adbvdkj.
+        abdhavjbv dvbadojbvjbv avdbvhjvbahavb avdbajbvfjbvf vbhahbvhvbdhv vbhabvhbhvf.
+      </p>
+    </article>
+  </section>
+  <section>
     <article id="work">
       <h2 class="subtitle reveal">These are my github repositories</h2>
      <div class="card-projects">
