add about me on navbar

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <ul class="navbar">
         <li id="home"> <a href="#" class="icon-link"><i class="fa fa-house fa-lg"></i></a></li>
         <li>
+          <a class="nav-link" href="#aboutMe">About me</a>
           <a class="nav-link" href="#work">Work</a>
           <a class="nav-link" href="#contact">Contact</a>
         </li>
@@ -62,7 +63,7 @@
     </div>
   </section>
   <section>
-    <article>
+    <article id="aboutMe">
       <h2 class="subtitle reveal">
         About me
       </h2>
