--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
   </header>
   <section>
-    <div class="presentation">
+    <div class="presentation centered-article">
       <h1 id="presentation-title">Hi, I am <br class='br-show'>Carlos Jorge!</h1>
       <h3 id="presentation-main-skill">I'm an <br class='br-show'>full-stack engineer</h3>
       <p id="presentation-description">
@@ -63,7 +63,7 @@
     </div>
   </section>
   <section>
-    <article id="aboutMe">
+    <article id="aboutMe" class="centered-article">
       <h2 class="subtitle reveal">
         About me
       </h2>
