center some pages and fix some paddings

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
           OpenEcommerce
         </div>
         <div class="card-description">
+          <p>
           OpenEcommerce is an ecommerce builded with .net. Using a hexagonal architecture, cqrs pattern and more interesting patterns.
+          </p>
         </div>
         <div class="card-links">
           <a class="icon-link" href="https://github.com/CarlosJorgeR/openEcommerce"><i class="fab fa-github fa-gl"></i></a>
@@ -94,7 +96,7 @@
           Angular Portfolio
         </div>
         <div class="card-description">
-          It is a personal portfolio builded with angular using really cool animation (Angular animations).
+          <p>It is a personal portfolio builded with angular using really cool animation (Angular animations).</p>
         </div>
         <div class="card-links">
           <a class="icon-link" href="https://github.com/CarlosJorgeR/portfolio"><i class="fab fa-github fa-gl"></i></a>
