change some font-size and color

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </section>
   <section>
     <article id="work">
-      <h2 class="subtitle reveal">These are my github repositories</h2>
+      <h2 class="subtitle reveal">Some projects I've make</h2>
      <div class="card-projects">
       <div id="open-ecommerce" class="card-project reveal">
         <div class="card-title">
