add compresed navbar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <body>
   <header>
-    <nav>
+    <nav class="navbar-uncompressed">
       <ul class="navbar">
         <li id="home"> <a href="#" class="icon-link"><i class="fa fa-house fa-lg"></i></a></li>
         <li>
@@ -49,6 +49,26 @@
           <a class="nav-link" href="#work">Work</a>
           <a class="nav-link" href="#contact">Contact</a>
         </li>
+      </ul>
+    </nav>
+    <nav class="navbar-compressed">
+      <div class="nav-header-menu">
+        <a href="#" class="icon-link"><i class="fa fa-bars fa-lg"></i></a>
+      </div>
+      <ul class="nav-menu">
+        <li class="nav-element">
+          <a class="nav-link compressed" href="#"><h2>Home</h2></a>
+        </li>
+        <li class="nav-element">
+          <a class="nav-link compressed" href="#aboutMe"><h2>About me</h2></a>
+        </li>
+        <li class="nav-element">
+          <a class="nav-link compressed" href="#work"><h2>Work</h2></a>
+        </li>
+        <li class="nav-element">
+          <a class="nav-link compressed" href="#contact"><h2>Contact</h2></a>
+        </li>
+
       </ul>
     </nav>
   </header>
