create events to open and close the nav-columnar-menu

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     </nav>
     <nav class="navbar-compressed">
       <div class="nav-header-menu">
-        <a href="#" class="icon-link"><i class="fa fa-bars fa-lg"></i></a>
+        <a class="icon-link" id="show-nav-columnar-menu"><i class="fa fa-bars fa-lg"></i></a>
       </div>
-      <ul class="nav-menu">
+      <ul id="nav-columnar-menu">
         <li class="nav-element">
           <a class="nav-link compressed" href="#"><h2>Home</h2></a>
         </li>
