opacify the background when the columnar menu is showed

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       </ul>
     </nav>
   </header>
+ <main>
   <section>
     <div class="presentation centered-article">
       <h1 id="presentation-title">Hi, I am <br class='br-show'>Carlos Jorge!</h1>
@@ -155,8 +156,8 @@
         </p>
       </div>
     </div>
-
   </footer>
+ </main>
 </body>
 
 </html>
