change direction of the navbar

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
     </nav>
     <nav class="navbar-compressed">
       <div class="nav-header-menu">
-        <a class="icon-link" id="show-nav-columnar-menu"><i class="fa fa-bars fa-lg"></i></a>
+        <a class="icon-link" id="show-nav-columnar-menu"><i class="fa fa-bars fa-xl"></i></a>
       </div>
       <ul id="nav-columnar-menu">
         <li class="nav-element">
-          <a class="nav-link compressed" href="#"><h2>Home</h2></a>
+          <a class="nav-link compressed" href="#"><h1>Home</h1></a>
         </li>
         <li class="nav-element">
-          <a class="nav-link compressed" href="#aboutMe"><h2>About me</h2></a>
+          <a class="nav-link compressed" href="#aboutMe"><h1>About me</h1></a>
         </li>
         <li class="nav-element">
-          <a class="nav-link compressed" href="#work"><h2>Work</h2></a>
+          <a class="nav-link compressed" href="#work"><h1>Work</h1></a>
         </li>
         <li class="nav-element">
-          <a class="nav-link compressed" href="#contact"><h2>Contact</h2></a>
+          <a class="nav-link compressed" href="#contact"><h1>Contact</h1></a>
         </li>
 
       </ul>
