add touch event to quit the navbar

--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
       </div>
       <ul id="nav-columnar-menu">
         <li class="nav-element">
-          <a class="nav-link compressed" href="#"><h1>Home</h1></a>
+          <a class="nav-link compressed" href="#"><h1 class="nav-link-label">Home</h1></a>
         </li>
         <li class="nav-element">
-          <a class="nav-link compressed" href="#aboutMe"><h1>About me</h1></a>
+          <a class="nav-link compressed" href="#aboutMe"><h1 class="nav-link-label">About me</h1></a>
         </li>
         <li class="nav-element">
-          <a class="nav-link compressed" href="#work"><h1>Work</h1></a>
+          <a class="nav-link compressed" href="#work"><h1 class="nav-link-label">Work</h1></a>
         </li>
         <li class="nav-element">
-          <a class="nav-link compressed" href="#contact"><h1>Contact</h1></a>
+          <a class="nav-link compressed" href="#contact"><h1 class="nav-link-label">Contact</h1></a>
         </li>
 
       </ul>
