create animation in oscured class

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </ul>
     </nav>
     <nav class="navbar-compressed">
-      <div class="nav-header-menu">
+      <div class="nav-header-menu oscured">
         <a class="icon-link" id="show-nav-columnar-menu"><i class="fa fa-bars fa-xl"></i></a>
       </div>
       <ul id="nav-columnar-menu">
@@ -72,7 +72,7 @@
       </ul>
     </nav>
   </header>
- <main>
+ <main class="oscured">
   <section>
     <div class="presentation centered-article">
       <h1 id="presentation-title">Hi, I am <br class='br-show'>Carlos Jorge!</h1>
