add a background to the modal

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
       </ul>
     </nav>
     <nav class="navbar-compressed">
-      <div class="nav-header-menu oscured">
+      <div class="nav-header-menu">
         <a class="icon-link" id="show-nav-columnar-menu"><i class="fa fa-bars fa-xl"></i></a>
       </div>
+     <div id="nav-columnar-menu-background">
       <ul id="nav-columnar-menu">
         <li class="nav-element">
           <a class="nav-link compressed" href="#"><h1 class="nav-link-label">Home</h1></a>
@@ -70,9 +71,10 @@
         </li>
 
       </ul>
+     </div>
     </nav>
   </header>
- <main class="oscured">
+ <main>
   <section>
     <div class="presentation centered-article">
       <h1 id="presentation-title">Hi, I am <br class='br-show'>Carlos Jorge!</h1>
