--- a/index.html
+++ b/index.html
@@ -58,15 +58,19 @@
      <div id="nav-columnar-menu-background">
       <ul id="nav-columnar-menu">
         <li class="nav-element">
+          <i class="fa fa-house fa-xl"></i>
           <a class="nav-link compressed" href="#"><h1 class="nav-link-label">Home</h1></a>
         </li>
         <li class="nav-element">
+          <i class="fa fa-user fa-xl"></i>
           <a class="nav-link compressed" href="#aboutMe"><h1 class="nav-link-label">About me</h1></a>
         </li>
         <li class="nav-element">
+          <i class="fa fa-tasks fa-xl"></i>
           <a class="nav-link compressed" href="#work"><h1 class="nav-link-label">Work</h1></a>
         </li>
         <li class="nav-element">
+          <i class="fa fa-phone fa-xl"></i>
           <a class="nav-link compressed" href="#contact"><h1 class="nav-link-label">Contact</h1></a>
         </li>
 
