change some size

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
       <div id="contact" class="contacts reveal">
         <h1 class="subtitle contacts-item">Contact</h1>
         <div class="contacts-item">
-          <a class="icon-link" href="mailto:rodriguezcuelloc@gmail.com"><i class="fab fa-google fa-2xl"></i></a>
-          <a class="icon-link" href="https://github.com/CarlosJorgeR"><i class="fab fa-github fa-2xl"></i></a>
-          <a class="icon-link" href="https://www.linkedin.com/in/cjrcuello/"><i class="fab fa-linkedin fa-2xl"></i></a>
-          <a class="icon-link" href="https://twitter.com/CarlosJorgeRod3"><i class="fab fa-twitter fa-2xl"></i></a>
+          <a class="icon-link" href="mailto:rodriguezcuelloc@gmail.com"><i class="fab fa-google fa-3x"></i></a>
+          <a class="icon-link" href="https://github.com/CarlosJorgeR"><i class="fab fa-github fa-3x"></i></a>
+          <a class="icon-link" href="https://www.linkedin.com/in/cjrcuello/"><i class="fab fa-linkedin fa-3x"></i></a>
+          <a class="icon-link" href="https://twitter.com/CarlosJorgeRod3"><i class="fab fa-twitter fa-3x"></i></a>
         </div>
       </div>
       <div class="footer-info reveal">
