--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description"
-    content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
-  <meta name="keywords" content="HTML,CSS,JavaScript,Github,Repository">
+    content="CarlosJorgeR's github repositories, custom portfolio. The main goals of these projects is having fun and learn new technologies and good practices">
+  <meta name="keywords" content="HTML,CSS,JavaScript,Github,Repository,Portfolio">
   <meta name="author" content="CarlosJorgeR">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:locale" content="en_US">
@@ -13,11 +13,11 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="CarlosJorgeR's github repositories">
   <meta property="og:description"
-    content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+    content="CarlosJorgeR's github repositories, custom portfolio. The main goals of these projects is having fun and learn new technologies and good practices">
   <meta property="og:site_name" content="My repositories">
   <meta property="og:image" itemprop="image" content="https://carlosjorger.github.io/my-repositories/images/logo.png">
   <meta property="twitter:description"
-    content="CarlosJorgeR's github repositories. The main goals of these projects is having fun and learn new technologies and good practices">
+    content="CarlosJorgeR's github repositories, custom portfolio. The main goals of these projects is having fun and learn new technologies and good practices">
   <meta property="twitter:title" content="CarlosJorgeR's github repositories">
   <link rel="icon" type="image/x-icon" href="images/github.ico">
   <title>My github repositories</title>
